# atium

./: .env.example  .gitignore  README.md  data.py  demo.py  demo_1.py  demo_2.py  example.py  pyproject.toml  test.py  test_data.py
demos/: demo_1.py  demo_2.py  demo_3.py  demo_4.py  demo_5.py  demo_6.py  demo_data.py
design/: api_sketch.py
src/allomancy/: backtester.py  data.py  risk_model.py  strategy.py
src/atium/: backtester.py  costs.py  data.py  factor_model.py  models.py  objectives.py  optimizer.py  optimizer_constraints.py  result.py  risk_model.py  schemas.py  signals.py  strategy.py  trade_generator.py  trading_constraints.py  types.py
src/atium/signals/: __init__.py
src/harbinger/: __init__.py  backtester.py  config.py  constraints.py  costs.py  data.py  objectives.py  optimizer_constraints.py  result.py  risk_model.py  strategy.py  trading_constraints.py
src/harbinger/backtest/: __init__.py
src/harbinger/data/: __init__.py
src/harbinger/metrics/: __init__.py
src/harbinger/optimize/: __init__.py
src/malatium/: backtester.py  risk_model.py  strategy.py
tests/: test_with_data.py
