[project]
name = "harbinger"
version = "0.1.0"
description = "Quant primitives for building a hedge fund"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bear-lake>=0.1.5",
    "cvxpy>=1.8.1",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
